name:                network-data-conduit
version:             0.1
synopsis:            A conduit for parsing TCP/IP/UDP frames
description:
  This package provides a @Conduit@ that lets you parse @ByteString@s into raw
  TCP/IP/UDP/etc frames.
homepage:            http://github.com/thoughtpolice/network-data-conduit
bug-reports:         https://github.com/thoughtpolice/network-data-conduit/issues
license:             BSD3
license-file:        LICENSE.txt
author:              Austin Seipp <mad.one@gmail.com>
maintainer:          Austin Seipp <mad.one@gmail.com>
category:            Network, Development
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC==7.4.2

extra-source-files:
  AUTHORS.txt, README.md
  examples/makefile, examples/*.hs

source-repository head
  type: git
  location: https://github.com/thoughtpolice/network-data-conduit.git

library
  exposed-modules:
    Network.Frame.Conduit
  build-depends:
    base         >= 3 && < 5,
    bytestring,
    transformers,
    network-data,
    conduit

  ghc-options:      -Wall -O2 -fwarn-tabs
  default-language: Haskell98

-- test-suite properties
--   hs-source-dirs: tests
--   main-is:        Properties.hs
--   type:           exitcode-stdio-1.0
--
--   build-depends:
--     base           >= 3 && < 5,
--     transformers,
--     bytestring,
--     pcap,
--     conduit,
--     network-data-conduit
--
--   ghc-options:      -fno-cse -fno-warn-orphans
--   default-language: Haskell98
